# picam

./: .gitignore  CMakeLists.txt  README.md
include/: cameracontrol.h
src/: camera.cpp  cameracontrol.cpp  picam.cpp
